# cifar10-resnet

./: .gitignore  README.md  pyproject.toml  requirements-mac.txt  requirements.txt
configs/: README.md  baseline_cnn.yaml  baseline_resnet_small.yaml  resnet_small_aug_basic_cosine.yaml
data/processed/: cifar10_stats_hf.json  cifar10_stats_torchvision.json
experiments/: README.md
notes/: 01-cifar-10-data.md  02-resnet-intuition.md  03-training-debugging.md
scripts/: train.py
src/cifar10_resnet/: __init__.py  checkpoint.py  dataset.py  evaluate.py  model.py  registry.py  telemetry.py  train.py  utils.py
